--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,12 +11,12 @@
       <ng-container matColumnDef="title">
           <th mat-header-cell *matHeaderCellDef>Title</th>
           <td mat-cell *matCellDef="let music; let i = index;">
-              <a style="cursor: pointer;">{{ music.title }}</a>
+              <a (click)="play(i)" style="cursor: pointer;">{{ music.title }}</a>
           </td>
       </ng-container>
       <ng-container matColumnDef="artist">
           <th mat-header-cell *matHeaderCellDef>Artist</th>
-          <td mat-cell *matCellDef="let music">{{ music.title }}</td>
+          <td mat-cell *matCellDef="let music">{{ music.artist }}</td>
       </ng-container>
       <ng-container matColumnDef="album">
           <th mat-header-cell *matHeaderCellDef>Album</th>
@@ -36,8 +36,8 @@
     <button mat-icon-button>
       <mat-icon>skip_previous</mat-icon>
     </button>
-    <button mat-icon-button>
-      <mat-icon>play_arrow</mat-icon>
+    <button mat-icon-button (click)="play()">
+      <mat-icon>{{ audio.paused ? 'play_arrow' : 'pause' }}</mat-icon>
     </button>
     <button mat-icon-button>
       <mat-icon>skip_next</mat-icon>
